<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_sports"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp" />

            <CheckBox
                android:id="@+id/checkBoxTennis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/sport_tennis"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <CheckBox
                android:id="@+id/checkBoxBasketball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sport_basketball"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <CheckBox
                android:id="@+id/checkBoxFootball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sport_football"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <CheckBox
                android:id="@+id/checkBoxVolleyball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sport_volleyball"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <CheckBox
                android:id="@+id/checkBoxGolf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sport_golf"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/saveSportsButton"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save_sport"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>