<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reservationImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:src="@drawable/football_pitch"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/secondaryVariant" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp" >

                <TextView
                    android:id="@+id/playgroundName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-5dp"
                    android:text="@string/playground_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/secondary_text_light" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:numStars="5"
                    android:rating="3.5" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/sportNameIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="5dp"
                        android:src="@drawable/football_ball" />

                    <TextView
                        android:id="@+id/sportName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/sport_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/secondary_text_light"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time_icon"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/secondary_text_light"
                        android:text="@string/edit_reservation_hours"/>

                    <Spinner
                        android:id="@+id/spinnerViewHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time_duration"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/secondary_text_light"
                        android:text="@string/edit_reservation_duration"/>

                    <Spinner
                        android:id="@+id/spinnerDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rentingEquipment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-5dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/renting_equipment"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>